--- a/code/salmon_group4.Rmd
+++ b/code/salmon_group4.Rmd
@@ -2,10 +2,54 @@
 title: "Willamette Falls fish passage time series summary"
 author: "Bri Baker, Jaleise Hall, Minnie Ringland"
 date: "1/31/2021"
-output: html_document
+output:
+  html_document:
+    theme: cosmo
+    code_folding: hide
+    highlight: kate
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = TRUE, message = FALSE, warning = FALSE)
+library(tidyverse)
+library(here)
+library(janitor)
+library(lubridate) # date manipulation
+library(tsibble) #time series table
+library(feasts) # seasonplot
+
+```
+
+## Overview {.tabset}
+
+Our overview goes here; includes an image, summary of dataset and report, map of fish ladder location, and data citation
+
+```{r data import}
+willamette_fish <- read_csv(here("data", "willamette_fish_passage.csv")) %>%  # read in data
+  clean_names() # names in tidy format
+
+```
+
+
+### Original time series
+
+```{r timeseries}
+
+```
+
+
+
+### Seasonplots
+
+```{r seasonplot}
+
+```
+
+
+
+### Annual counts by species
+
+```{r annual counts}
+
 ```
 
