--- a/code/salmon_group4.Rmd
+++ b/code/salmon_group4.Rmd
@@ -115,9 +115,9 @@ ggplot(data = salmon_longer, aes(x = date, y = counts, color = species)) + # mak
 
 #### Takeaways
 
-* The bulk of Steelhead movement occurs earlier in the year than that of Coho and Jack Coho
+* The most apparent pattern in the data is seasonality on an annual basis, with peak sightings occurring mid-year(?).
+* The bulk of Steelhead movement occurs earlier in the year than that of Coho and Jack Coho.
 * Coho increased in abundance over the time studied, particularly in 2009 and 2010.
-
 
 
 
@@ -130,6 +130,10 @@ ggplot(data = salmon_longer, aes(x = date, y = counts, color = species)) + # mak
 
 
 ### Annual counts by species
+
+Issues I'm having: 
+* I think the "year" variable I'm using is not a date type? Bri's code for formatting the x-axis breaks isn't working for me.
+* How to get the facets labeled with the proper names of the species?
 
 ```{r annual counts}
 # Using Bri's "pivot_longer-ed" df:
@@ -147,18 +151,21 @@ ggplot(data = annual, aes(x = yr, y = annual_count, fill = species)) + # make gg
        y = "Count",
        title = "Salmon counts at Willamette Falls fish passage by year",
        subtitle = "2001 - 2010",
-       caption = "Minnie Ringland, 2021\nSource: Columbia River DART",
-       color = "Species") +
+       caption = "Minnie Ringland, 2021\nSource: Columbia River DART") +
   scale_fill_manual(values = c("aquamarine3", "cornflowerblue", "goldenrod1")) + # change colors
-  #scale_x_date(date_breaks = "1 year", # show all years
-               #date_labels = "%Y") +
+  scale_x_discrete(breaks = 2001:2011) +
+  #(date_breaks = "1 year", # show all years #date_labels = "%Y") +
   theme_minimal() + # use theme_minimal
   theme(legend.position = "none", # faceted so no legend
         axis.text.x = element_text(angle = 30, vjust = 1, hjust = 1)) + # angle x labels
-  facet_wrap(~species,labeller=labeller(species = labels))
-
-  
+  facet_wrap(~species)#,labeller=labeller(species = labels))
 
 
 ```
+
+#### Takeaways
+
+* Once we collapse the data by year, there do not appear to be any common trends in the data across species.
+* As seen in the original time series, Steelhead were sighted in greater numbers than the two Coho species across the entire study period, suggesting that the population is more abundant or that these fish are easier to count.  
+* However, Coho fish were seen in greater abundance, particularly in the last two years of the study period, which could suggest a population increase. Jack Coho fish seem to be present in very low numbers, which could be cause for concern.
 
