--- a/code/salmon_group4.Rmd
+++ b/code/salmon_group4.Rmd
@@ -82,7 +82,6 @@ willamette_salmon <- read_csv(here("data", "willamette_fish_passage.csv")) %>%  
 
 ### Original time series
 
-<<<<<<< HEAD
 ```{r timeseries, Bri Baker}
 
 willamette_salmon %>%  
@@ -117,8 +116,6 @@ willamette_salmon %>%
 * Coho increased in abundance over the time studied, particularly in 2009 and 2010.
 
 
-
-
 ### Seasonplots -- Also ugly and unfinished
 
 ```{r seasonplot, Jaleise Hall}
@@ -151,25 +148,42 @@ steelhead_subset %>%
 
 ```
 
+### Annual counts by species
 
+Issues I'm having: 
+* I think the "year" variable I'm using is not a date type? Bri's code for formatting the x-axis breaks isn't working for me.
+* How to get the facets labeled with the proper names of the species?
 
-### Annual counts by species - Minnie (still ugly!)
-
-```{r annual counts, Minnie Ringland}
-
-annual <- willamette_salmon %>%
+```{r annual counts}
+# Using Bri's "pivot_longer-ed" df:
+annual <- salmon_longer %>%
   index_by(yr = ~year(.)) %>% # index by year
-  summarize(annual_coho = sum(coho, na.rm = TRUE), # summarize each spp
-            annual_jack_coho = sum(jack_coho, na.rm = TRUE),
-            annual_steelhead = sum(steelhead, na.rm = TRUE)
-            )
+  group_by(yr, species) %>% 
+  summarize(annual_count = sum(counts)) # sum counts by year and species
 
-ggplot(data = annual) +
-  geom_line(aes(x=yr, y=annual_coho), color = "blue") +
-    geom_line(aes(x=yr, y=annual_jack_coho), color = "green") +
-    geom_line(aes(x=yr, y=annual_steelhead), color = "red")
-  
+labels <- c("Coho", "Jack Coho", "Steelhead") # capitalize
+
+# Using Bri's graph formatting:
+ggplot(data = annual, aes(x = yr, y = annual_count, fill = species)) + # make ggplot
+  geom_col() + #as a barchart
+  labs(x = "Year", # add labs
+       y = "Count",
+       title = "Salmon counts at Willamette Falls fish passage by year",
+       subtitle = "2001 - 2010",
+       caption = "Minnie Ringland, 2021\nSource: Columbia River DART") +
+  scale_fill_manual(values = c("aquamarine3", "cornflowerblue", "goldenrod1")) + # change colors
+  scale_x_discrete(breaks = 2001:2011) +
+  #(date_breaks = "1 year", # show all years #date_labels = "%Y") +
+  theme_minimal() + # use theme_minimal
+  theme(legend.position = "none", # faceted so no legend
+        axis.text.x = element_text(angle = 30, vjust = 1, hjust = 1)) + # angle x labels
+  facet_wrap(~species)#,labeller=labeller(species = labels))
 
 
 ```
 
+#### Takeaways
+
+* Once we collapse the data by year, there do not appear to be any common trends in the data across species.
+* As seen in the original time series, Steelhead were sighted in greater numbers than the two Coho species across the entire study period, suggesting that the population is more abundant or that these fish are easier to count.  
+* However, Coho fish were seen in greater abundance, particularly in the last two years of the study period, which could suggest a population increase. Jack Coho fish seem to be present in very low numbers, which could be cause for concern.
