--- a/code/salmon_group4.Rmd
+++ b/code/salmon_group4.Rmd
@@ -21,7 +21,7 @@ library(maps)
 library(sf)
 library(rnaturalearth)
 library(rnaturalearthdata)
-
+library(rgeos) #for worlds polygon (it won't let me run the code without this)
 ```
 
 ## Overview {.tabset}
@@ -29,15 +29,8 @@ library(rnaturalearthdata)
 ![Salmon leaping at Willamette Falls from NOAA's Historic Fisheries Collection. Unknown photographer, 27 June 1950.](https://upload.wikimedia.org/wikipedia/commons/c/cb/Salmon_leaping_at_Willamette_Falls.jpg)
 
 
+Hydroelectric power represents an important renewable and low-emissions energy source, but the construction and development of the water source that the power plants can require sometimes threatens resident fish populations. Willamette Falls, located outside of Portland in northwestern Oregon (see map below), is an important traditional Native American fishing ground. To protect this natural resource and aid the passage of salmon and steelhead runs over the falls, fishways have been constructed and updated over time. Daily fish counts are monitored to ensure that migration of these fish populations continues to be unhindered by the power plant and the falls. This report summarizes findings from studying Willamette Falls monitoring data from 2001 to 2010.
 
-Our overview goes here; includes
-
-- an image (done)  
-- summary of dataset and report  
-- map of fish ladder location (do we want more info on this?)
-- data citation (done-ish? How do you two feel about the format?, looks ok to me)
-
-Hydroelectric power represents an important renewable and low-emissions energy source, but the construction and development of the water source that the power plants can require sometimes threatens resident fish populations. Willamette Falls, located outside of Portland in northwestern Oregon (see map below), is an important traditional Native American fishing ground. To protect this natural resource and aid the passage of salmon and steelhead runs over the falls, fishways have been constructed and updated over time. Daily fish counts are monitored to ensure that migration of these fish populations continues to be unhindered by the power plant and the falls. This project summarizes findings from studying Willamette Falls monitoring data from 2001 to 2010.
 
 Data were shared by and accessed from [Columbia River DART](http://www.cbr.washington.edu/dart/overview):  
 Columbia River DART (Data Access in Real Time), Columbia Basin Research, University of Washington  
@@ -45,7 +38,6 @@ Accessed Feb 1, 2021 at [http://www.cbr.washington.edu/dart/query/adult_graph_te
 
 
 ```{r map}
-# Map of Willamette Falls - this looks great!!
 world <- ne_countries(scale = "medium", returnclass = "sf") # pull world data
 states <- st_as_sf(map("state", plot = FALSE, fill = TRUE)) # pull state data
 states <- cbind(states, st_coordinates(st_centroid(states))) # project
@@ -67,32 +59,36 @@ ggplot(data = world) + # plot
 ```
 
 
-
 ```{r data import}
 
 willamette_salmon <- read_csv(here("data", "willamette_fish_passage.csv")) %>%  # read in data
   clean_names() %>% # names in tidy format
   select(date, coho, jack_coho, steelhead) %>% # select desired species
   mutate(date = mdy(date)) %>%  # make date class
-   as_tsibble(key = NULL, index = date)# convert to tsibble
+   as_tsibble(key = NULL, index = date) # convert to tsibble
 
-
-
-```
-
-
-### Original time series
-
-
-```{r timeseries}
-# Bri, I am saving your df if that's ok - so I can use it later on!
 salmon_longer <- willamette_salmon %>%  
   replace(is.na(.), 0) %>%  # replace na with 0
   pivot_longer(coho:steelhead, # consolidate species to one column
                names_to = "species",
+               values_to = "counts") 
+
+```
+
+### Original time series
+
+```{r timeseries, Bri Baker}
+
+salmon_longer <- willamette_salmon %>%  
+  replace(is.na(.), 0) %>%  # replace na with 0
+  rename(Coho = coho,
+         "Jack Coho" = jack_coho,
+         Steelhead = steelhead) %>% 
+  pivot_longer(Coho:Steelhead, # consolidate species to one column
+               names_to = "species",
                values_to = "counts")
 
-ggplot(data = salmon_longer, aes(x = date, y = counts, color = species)) + # make ggplot
+ggplot(salmon_longer, aes(x = date, y = counts, color = species)) + # make ggplot
   geom_line() + #as a lineplot
   labs(x = "Year", # add labs
        y = "Count",
@@ -100,7 +96,7 @@ ggplot(data = salmon_longer, aes(x = date, y = counts, color = species)) + # mak
        subtitle = "2001 - 2010",
        caption = "Bri Baker, 2021\nSource: Columbia River DART",
        color = "Species") +
-  scale_color_manual(labels = c("Coho", "Jack Coho", "Steelhead"), # change legend names
+  scale_color_manual(#labels = c("Coho", "Jack Coho", "Steelhead"), # change legend names
                      values = c("aquamarine3", "cornflowerblue", "goldenrod1")) + # change colors
   scale_x_date(date_breaks = "1 year", # show all years
                date_labels = "%Y") +
@@ -108,7 +104,6 @@ ggplot(data = salmon_longer, aes(x = date, y = counts, color = species)) + # mak
   theme(legend.position = c(0.15, 0.75), # move legend
         legend.background = element_rect(fill="white", linetype = "solid", color = "whitesmoke"), # format legend
         axis.text.x = element_text(angle = 30, vjust = 1, hjust = 1)) # angle x labels
-
 
 ```
 
@@ -120,52 +115,78 @@ ggplot(data = salmon_longer, aes(x = date, y = counts, color = species)) + # mak
 * Coho increased in abundance over the time studied, particularly in 2009 and 2010.
 
 
+### Seasonplots -- Also ugly and unfinished
 
-### Seasonplots
+```{r seasonplot, Jaleise Hall}
+# salmon_season <-  willamette_salmon %>%
+#   rename(Coho = coho,
+#          "Jack Coho" = jack_coho,
+#          Steelhead = steelhead) %>% 
+#   pivot_longer(Coho:Steelhead, 
+#                names_to = "species",
+#                values_to = "counts") 
 
-```{r seasonplot}
+salmon_season <- salmon_longer %>% 
+  gg_season(counts)
 
+coho_subset <- willamette_salmon %>% 
+  select(date, coho) 
+coho_subset %>% 
+  gg_season(coho)
+
+jack_coho_subset <- willamette_salmon %>% 
+  select(date, jack_coho) 
+jack_coho_subset %>% 
+  gg_season(jack_coho)
+
+steelhead_subset <- willamette_salmon %>% 
+  select(date, steelhead) 
+steelhead_subset %>% 
+  gg_season(steelhead)
 ```
 
+```{r}
+gg_subseries(salmon_longer, period = "day")
+```
 
+#### Takeaways
+
+* 
+*
+*
 
 ### Annual counts by species
 
-Issues I'm having: 
-* I think the "year" variable I'm using is not a date type? Bri's code for formatting the x-axis breaks isn't working for me.
-* How to get the facets labeled with the proper names of the species?
-
-```{r annual counts}
+```{r annual counts, Minnie Ringland}
 # Using Bri's "pivot_longer-ed" df:
 annual <- salmon_longer %>%
-  index_by(yr = ~year(.)) %>% # index by year
-  group_by(yr, species) %>% 
-  summarize(annual_count = sum(counts)) # sum counts by year and species
-
-labels <- c("Coho", "Jack Coho", "Steelhead") # capitalize
+  group_by_key() %>% # group by species
+  index_by(yr = ~year(.)) %>% # grouping the time index by year
+  #group_by(yr, species) %>% 
+  summarize(annual_count = sum(counts)) %>% # sum counts by year and species
+  mutate(yr = as.Date(ISOdate(yr, 1, 1)))
 
 # Using Bri's graph formatting:
-ggplot(data = annual, aes(x = yr, y = annual_count, fill = species)) + # make ggplot
-  geom_col() + #as a barchart
-  labs(x = "Year", # add labs
+ggplot(data = annual, aes(x = yr, y = annual_count, color = species)) +
+  geom_line(size=1.25) +
+  labs(x = "Year",
        y = "Count",
        title = "Salmon counts at Willamette Falls fish passage by year",
        subtitle = "2001 - 2010",
        caption = "Minnie Ringland, 2021\nSource: Columbia River DART") +
-  scale_fill_manual(values = c("aquamarine3", "cornflowerblue", "goldenrod1")) + # change colors
-  scale_x_discrete(breaks = 2001:2011) +
-  #(date_breaks = "1 year", # show all years #date_labels = "%Y") +
-  theme_minimal() + # use theme_minimal
-  theme(legend.position = "none", # faceted so no legend
-        axis.text.x = element_text(angle = 30, vjust = 1, hjust = 1)) + # angle x labels
-  facet_wrap(~species)#,labeller=labeller(species = labels))
+  scale_color_manual(values = c("aquamarine3", "cornflowerblue", "goldenrod1")) + # change colors
+  scale_x_date(date_breaks = "1 year", # show all years
+               date_labels = "%Y") +
+  theme_minimal() +
+  theme(legend.position = c(0.75, 0.75), # move legend
+        legend.background = element_rect(fill="white", linetype = "solid", color = "whitesmoke"), # format legend
+        axis.text.x = element_text(angle = 30, vjust = 1, hjust = 1)) # angle x labels
 
 
 ```
 
 #### Takeaways
 
-* Once we collapse the data by year, there do not appear to be any common trends in the data across species.
-* As seen in the original time series, Steelhead were sighted in greater numbers than the two Coho species across the entire study period, suggesting that the population is more abundant or that these fish are easier to count.  
-* However, Coho fish were seen in greater abundance, particularly in the last two years of the study period, which could suggest a population increase. Jack Coho fish seem to be present in very low numbers, which could be cause for concern.
-
+* As seen in the original time series, Steelhead were sighted in greater numbers than the two Coho species across almost the entire study period, suggesting that the population is more abundant or that these fish are easier to count. 
+* Once we collapse the data by year, there do not appear to be any patterns in terms of cyclicality or trends common across species.
+* Within species though, Steelhead populations appear to be trending down, while Coho fish were seen in greater abundance over time, particularly in the last two years of the study period, which could suggest a population increase. Jack Coho fish seem to be present in very low numbers with no change over time, which could be cause for concern.
